<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_image_clear"
    android:overScrollMode="never"
    android:paddingStart="30dp"
    android:paddingTop="10dp"
    android:paddingEnd="30dp"
    android:paddingBottom="70dp"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weather_con_header"
            android:layout_width="0dp"
            android:layout_height="170dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/weather_text_header_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="0°"
                android:textColor="#FFFFFF"
                android:textSize="120sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/weather_text_header_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Type"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_text_header_city" />

            <TextView
                android:id="@+id/weather_text_header_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Day"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_text_header_high_low" />

            <TextView
                android:id="@+id/weather_text_header_high_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="H: 0° L: 0°"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_text_header_type" />

            <TextView
                android:id="@+id/weather_text_header_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="Gödöllő"
                android:textColor="#FFFFFF"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/weather_image_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:textColor="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_con_header" />

        <ImageView
            android:id="@+id/weather_image_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:textColor="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_recycler_hourly_forecasts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_recycler_hourly_forecasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_image_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weather_recycler_daily_forecasts"
            android:layout_width="575dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_image_line2" />

        <TextView
            android:id="@+id/weather_text_sunrise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/sunrise"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/weather_recycler_daily_forecasts"
            app:layout_constraintTop_toBottomOf="@+id/weather_image_line2" />

        <TextView
            android:id="@+id/weather_text_sunset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/sunset"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/weather_text_sunrise_title"
            app:layout_constraintTop_toBottomOf="@+id/weather_text_sunrise_title" />

        <TextView
            android:id="@+id/weather_text_humidity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/humidity"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/weather_text_sunset_title"
            app:layout_constraintTop_toBottomOf="@+id/weather_text_sunset_title" />

        <TextView
            android:id="@+id/weather_text_wind_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/wind"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/weather_text_humidity_title"
            app:layout_constraintTop_toBottomOf="@+id/weather_text_humidity_title" />

        <TextView
            android:id="@+id/weather_text_clouds_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/clouds"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/weather_text_wind_title"
            app:layout_constraintTop_toBottomOf="@+id/weather_text_wind_title" />

        <TextView
            android:id="@+id/weather_text_clouds_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="0%"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/weather_text_clouds_title"
            app:layout_constraintTop_toTopOf="@+id/weather_text_clouds_title" />

        <TextView
            android:id="@+id/weather_text_wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="0 km/h"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/weather_text_wind_title"
            app:layout_constraintTop_toTopOf="@+id/weather_text_wind_title" />

        <TextView
            android:id="@+id/weather_text_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="0%"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/weather_text_humidity_title"
            app:layout_constraintTop_toTopOf="@+id/weather_text_humidity_title" />

        <TextView
            android:id="@+id/weather_text_sunset_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="00:00"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/weather_text_sunset_title"
            app:layout_constraintTop_toTopOf="@+id/weather_text_sunset_title" />

        <TextView
            android:id="@+id/weather_text_sunrise_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-light"
            android:text="00:00"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/weather_text_sunrise_title"
            app:layout_constraintTop_toTopOf="@+id/weather_text_sunrise_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
